# fretscope

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  build.yml  release.yml
src/: key_detect.rs  lib.rs  main.rs  note_log.rs  pitch.rs  theory.rs
src/editor/: fretboard.rs  key_panel.rs  mod.rs  note_log_widget.rs  theme.rs
